refactor: use mutable list for the default searchable strings